--- a/style.css
+++ b/style.css
@@ -27,27 +27,12 @@ img {
   color: #001931;
   margin-bottom: 16px;
 }
-.para24 {
+.primary-para {
   color: #627382;
-  line-height: 24px;
-}
-.para20 {
-  color: #627382;
-  line-height: 20px;
+  line-height: 2;
 }
 .color-white {
   color: #ffffff;
-}
-.primary-btn {
-  padding: 16.5px 16px;
-  color: #ffffff;
-  font-size: 16px;
-  font-weight: 600;
-  text-align: center;
-  border: none;
-  border-radius: 4px;
-  background-color: #469165;
-  cursor: pointer;
 }
 .nav-btn {
   padding: 12.5px 16px;
@@ -59,6 +44,25 @@ img {
   border-radius: 4px;
   background-color: #469165;
   cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+.nav-btn:hover {
+  background-color: #3a7f57;
+}
+.primary-btn {
+  padding: 16.5px 16px;
+  color: #ffffff;
+  font-size: 16px;
+  font-weight: 600;
+  text-align: center;
+  border-radius: 4px;
+  background-color: #469165;
+  cursor: pointer;
+  border: 2px solid #ffffff00;
+  transition: background-color 0.3s ease;
+}
+.primary-btn:hover {
+  background-color: #3a7f57;
 }
 .secondary-btn {
   padding: 16.5px 16px;
@@ -70,6 +74,11 @@ img {
   border-radius: 4px;
   background-color: transparent;
   cursor: pointer;
+  transition: color 0.3s ease, background-color 0.3s ease;
+}
+.secondary-btn:hover {
+  color: #469165;
+  background-color: #ffffff;
 }
 /* shared styles ends */
 
@@ -80,7 +89,7 @@ img {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 16px 0;
+  padding: 15px 0;
 }
 .nav-logo {
   width: 140px;
@@ -92,6 +101,54 @@ img {
 .nav-items ul a {
   color: #000000;
 }
+.hero-btns {
+  display: flex;
+  gap: 15px;
+  justify-content: center;
+}
 /* nav-bar ends */
 
+/* hero starts */
+#hero {
+  padding: 125px 0;
+  background: url(./assets/hero-bg.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+.hero-contents {
+  text-align: center;
+}
+.hero-badge {
+  display: flex;
+  gap: 6px;
+  color: #469165;
+  margin: 0 auto 16px;
+  background-color: white;
+  border-radius: 50px;
+  padding: 8px 12px;
+  max-width: fit-content;
+  font-weight: 500;
+}
+.hero-badge img {
+  width: 16px;
+}
+.hero-title {
+  color: white;
+  font-size: 72px;
+  font-weight: bold;
+  line-height: 84px;
+  text-transform: capitalize;
+  margin-bottom: 16px;
+}
+.hero-title span {
+  color: #30b868;
+}
+.hero-desc {
+  margin-bottom: 32px;
+  max-width: 700px;
+  margin: 0 auto;
+  margin-bottom: 32px;
+}
+/* hero ends */
 /* header ends */
